--- a/application/home/views/login/signup.html
+++ b/application/home/views/login/signup.html
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
             <!-- Start Sign In Form -->
-            <form action="#" method="post" id="regform" class="fh5co-form animate-box"
+            <form action="index.php?g=home&c=user&a=checkname" method="post" id="regform" class="fh5co-form animate-box"
                   data-animate-effect="fadeIn">
                 <h2>Sign Up</h2>
                 <div class="form-group">
@@ -90,7 +90,7 @@
                 return;
             }
             $.post(
-                'index.php?g=home&c=user&a=checkUserByName',
+                'index.php?g=home&c=user&a=checkname',
                 {"uname": $uname},
                 function (result) {
                     if (result == 0) {
