--- a/application/home/views/login/index.html
+++ b/application/home/views/login/index.html
@@ -17,7 +17,7 @@
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
             <!-- Start Sign In Form -->
-            <form action="index.php?g=home&c=user&a=login" method="post" id="loginform" class="fh5co-form animate-box"
+            <form action="#" method="post" id="loginform" class="fh5co-form animate-box"
                   data-animate-effect="fadeIn">
                 <h2>Sign In</h2>
                 <div class="form-group">
@@ -97,7 +97,7 @@
                     if (result.errno == 200) {
                         $("#alertmess").html("登陆成功！");
                         alert(result.mess + "\n点击确认按钮进入系统首页！");
-                        window.location.href = "index.php";
+                        window.location.href = "index.php?g=home&c=user&a=index";
                     } else {
                         $("#alertmess").html("用户名密码不正确！");
                     }
