login to usercenter finish

--- a/application/home/views/index/contact.html
+++ b/application/home/views/index/contact.html
@@ -76,7 +76,8 @@
                         alert(result.mess+"\n点击确定按钮返回网站首页。");
                         window.location.href="index.php";
                     }else{
-                        window.location.href="index.php?g=home&c=index&a=contact";
+                        alert(result.mess+"\n点击确定按钮返回留言页面。");
+                        // window.location.href="index.php?g=home&c=index&a=contact";
                     }
                 },
                 "json"
