--- a/application/home/views/common/index_header.html
+++ b/application/home/views/common/index_header.html
@@ -24,6 +24,7 @@
                 <li><a href="index.php?g=home&c=index&a=news" <?php if(\core\Application::$action=='news') echo 'class="active"'; ?>> <span data-hover="News">News</span></a></li>
                 <li><a href="index.php?g=home&c=index&a=contact" <?php if(\core\Application::$action=='contact') echo 'class="active"'; ?>> <span data-hover="Contact">Contact</span></a></li>
                 <li><a href="index.php?g=home&c=user&a=index"> <span data-hover="User">User</span></a></li>
+                <li><a href="index.php?g=admin&c=login&a=index"> <span data-hover="Admin">Admin</span></a></li>
             </ul>
             <!-- script-for-menu -->
             <script>
