--- a/application/admin/views/common/index_top.html
+++ b/application/admin/views/common/index_top.html
@@ -12,11 +12,11 @@
             <ul class="user-menu">
                 <li class="dropdown pull-right">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span
-                            class="glyphicon glyphicon-user"></span> User <span class="caret"></span></a>
+                            class="glyphicon glyphicon-user"></span>  <?php echo $this->data['name'];?>  <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
-                        <li><a href="#"><span class="glyphicon glyphicon-cog"></span> Settings</a></li>
-                        <li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                        <li><a href="#"><span class="glyphicon glyphicon-user"></span>管理员信息</a></li>
+                        <li><a href="#"><span class="glyphicon glyphicon-cog"></span>资料修改</a></li>
+                        <li><a href="index.php?g=admin&c=login&a=logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                     </ul>
                 </li>
             </ul>
