--- a/application/admin/views/common/index_aside.html
+++ b/application/admin/views/common/index_aside.html
@@ -15,3 +15,19 @@
         <li><a href="index.php?g=admin&c=login&a=logout"><span class="glyphicon glyphicon-user"></span> Login Out</a></li>
     </ul>
 </div>
+
+<script>
+    !function ($) {
+        $(document).on("click", "ul.nav li.parent > a > span.icon", function () {
+            $(this).find('em:first').toggleClass("glyphicon-minus");
+        });
+        $(".sidebar span.icon").find('em:first').addClass("glyphicon-plus");
+    }(window.jQuery);
+
+    $(window).on('resize', function () {
+        if ($(window).width() > 768) $('#sidebar-collapse').collapse('show')
+    })
+    $(window).on('resize', function () {
+        if ($(window).width() <= 767) $('#sidebar-collapse').collapse('hide')
+    })
+</script>
